crates/sgf-core/tests/snapshots/planet_page/capital_4_5_18.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
{
  "id": 18,
  "name": {
    "key": "SPEC_Nagyari_planet",
    "literal": false,
    "variables": []
  },
  "name_key": "SPEC_Nagyari_planet",
  "label": "SPEC_Nagyari_planet",
  "class": "pc_alpine",
  "size": 21,
  "orbit": 95.0,
  "system": 463,
  "parent": 15,
  "moons": [],
  "deposits": [
    {
      "id": 454,
      "kind": "d_failing_infrastructure",
      "swap_type": "d_ore_rich_caverns"
    },
    {
      "id": 455,
      "kind": "d_fungal_caves",
      "swap_type": null
    },
    {
      "id": 456,
      "kind": "d_hot_springs",
      "swap_type": null
    },
    {
      "id": 457,
      "kind": "d_frozen_gas_lake",
      "swap_type": null
    },
    {
      "id": 458,
      "kind": "d_tempestous_mountain",
      "swap_type": null
    },
    {
      "id": 459,
      "kind": "d_veiny_cliffs",
      "swap_type": null
    },
    {
      "id": 460,
      "kind": "d_ore_rich_caverns",
      "swap_type": null
    },
    {
      "id": 461,
      "kind": "d_rich_mountain",
      "swap_type": null
    },
    {
      "id": 462,
      "kind": "d_forgiving_tundra",
      "swap_type": null
    },
    {
      "id": 463,
      "kind": "d_fungal_caves",
      "swap_type": null
    },
    {
      "id": 464,
      "kind": "d_forgiving_tundra",
      "swap_type": null
    },
    {
      "id": 465,
      "kind": "d_fungal_forest",
      "swap_type": null
    }
  ],
  "planet_modifiers": [],
  "timed_modifiers": [
    {
      "modifier": "prosp_uni_mod",
      "days": 6756
    }
  ],
  "surveyed_by": null,
  "station": null,
  "owner": 1,
  "controller": 1,
  "colony": {
    "id": 1,
    "colonised": "2016.05.09",
    "final_designation": "col_capital",
    "designation": "col_capital",
    "pops": 5382,
    "species": [
      {
        "id": 2,
        "name": {
          "key": "SPEC_Nagyari",
          "literal": false,
          "variables": []
        },
        "pops": 5382
      }
    ],
    "districts": [
      {
        "kind": "district_city",
        "level": 3
      },
      {
        "kind": "district_generator",
        "level": 3
      },
      {
        "kind": "district_mining",
        "level": 2
      },
      {
        "kind": "district_farming",
        "level": 4
      }
    ],
    "zones": [
      "zone_default",
      "zone_research_unity",
      "zone_industrial"
    ],
    "buildings": [
      "building_capital",
      "building_medical_1",
      "building_research_lab_1",
      "building_galactic_memorial_1",
      "building_factory_1"
    ]
  },
  "flags": 1,
  "anomaly": null,
  "terraforming": false,
  "clearing": [],
  "dig_site": null
}
