crates/sgf-core/tests/snapshots/planet_page/nekkar_i_731.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
{
  "id": 731,
  "name": {
    "key": "PLANET_NAME_FORMAT",
    "literal": false,
    "variables": [
      {
        "name": "PARENT",
        "value": {
          "key": "Nekkar",
          "literal": false,
          "variables": []
        }
      },
      {
        "name": "NUMERAL",
        "value": {
          "key": "I",
          "literal": true,
          "variables": []
        }
      }
    ]
  },
  "name_key": "PLANET_NAME_FORMAT",
  "label": "PLANET_NAME_FORMAT",
  "class": "pc_tropical",
  "size": 16,
  "entity_name": null,
  "orbit": 60.0,
  "system": 396,
  "parent": 730,
  "moons": [],
  "deposits": [
    {
      "id": 1025,
      "kind": "d_bubbling_swamp",
      "swap_type": null
    },
    {
      "id": 1026,
      "kind": "d_crystalline_caverns",
      "swap_type": null
    },
    {
      "id": 1027,
      "kind": "d_tropical_island",
      "swap_type": null
    },
    {
      "id": 1028,
      "kind": "d_prosperous_mesa",
      "swap_type": null
    },
    {
      "id": 1029,
      "kind": "d_mineral_fields",
      "swap_type": null
    },
    {
      "id": 1031,
      "kind": "d_alien_pets_deposit",
      "swap_type": null
    },
    {
      "id": 1032,
      "kind": "d_lush_jungle",
      "swap_type": null
    },
    {
      "id": 1033,
      "kind": "d_mineral_fields",
      "swap_type": null
    },
    {
      "id": 1034,
      "kind": "d_bubbling_swamp",
      "swap_type": null
    },
    {
      "id": 1036,
      "kind": "d_prosperous_mesa",
      "swap_type": null
    },
    {
      "id": 1037,
      "kind": "d_tempestous_mountain",
      "swap_type": null
    }
  ],
  "planet_modifiers": [],
  "timed_modifiers": [],
  "surveyed_by": null,
  "station": null,
  "owner": 16,
  "controller": 16,
  "colony": {
    "id": 29,
    "colonised": "2200.01.01",
    "final_designation": "col_fe_colony",
    "designation": null,
    "pops": 1600,
    "species": [
      {
        "id": 20,
        "name": {
          "key": "SPEC_Ti-Zru",
          "literal": false,
          "variables": []
        },
        "pops": 800
      },
      {
        "id": 22,
        "name": {
          "key": "NAME_Synthetic",
          "literal": false,
          "variables": []
        },
        "pops": 800
      }
    ],
    "districts": [
      {
        "kind": "district_city",
        "level": 4
      },
      {
        "kind": "district_generator",
        "level": 2
      },
      {
        "kind": "district_mining",
        "level": 2
      }
    ],
    "zones": [
      "zone_default",
      "zone_industrial",
      "zone_energy",
      "zone_minerals"
    ],
    "buildings": [
      "building_ancient_palace",
      "building_fe_dome",
      "building_micro_forge",
      "building_affluence_emporium",
      "building_dimensional_replicator",
      "building_class_4_singularity",
      "building_energy_nexus",
      "building_fe_mine_2",
      "building_mineral_purification_hub"
    ]
  },
  "flags": 1,
  "anomaly": null,
  "terraforming": false,
  "clearing": []
}
