crates/sgf-core/tests/snapshots/planet_page/nekkar_viii_744.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
{
  "id": 744,
  "name": {
    "key": "PLANET_NAME_FORMAT",
    "literal": false,
    "variables": [
      {
        "name": "PARENT",
        "value": {
          "key": "Nekkar",
          "literal": false,
          "variables": []
        }
      },
      {
        "name": "NUMERAL",
        "value": {
          "key": "VIII",
          "literal": true,
          "variables": []
        }
      }
    ]
  },
  "name_key": "PLANET_NAME_FORMAT",
  "label": "PLANET_NAME_FORMAT",
  "class": "pc_gas_giant",
  "size": 20,
  "entity_name": null,
  "orbit": 230.0,
  "system": 396,
  "parent": 730,
  "moons": [
    {
      "id": 745,
      "name": {
        "key": "SUBPLANET_NAME_FORMAT",
        "literal": false,
        "variables": [
          {
            "name": "PARENT",
            "value": {
              "key": "PLANET_NAME_FORMAT",
              "literal": false,
              "variables": [
                {
                  "name": "PARENT",
                  "value": {
                    "key": "Nekkar",
                    "literal": false,
                    "variables": []
                  }
                },
                {
                  "name": "NUMERAL",
                  "value": {
                    "key": "VIII",
                    "literal": true,
                    "variables": []
                  }
                }
              ]
            }
          },
          {
            "name": "NUMERAL",
            "value": {
              "key": "a",
              "literal": true,
              "variables": []
            }
          }
        ]
      },
      "name_key": "SUBPLANET_NAME_FORMAT",
      "class": "pc_frozen",
      "size": 10
    },
    {
      "id": 746,
      "name": {
        "key": "SUBPLANET_NAME_FORMAT",
        "literal": false,
        "variables": [
          {
            "name": "PARENT",
            "value": {
              "key": "PLANET_NAME_FORMAT",
              "literal": false,
              "variables": [
                {
                  "name": "PARENT",
                  "value": {
                    "key": "Nekkar",
                    "literal": false,
                    "variables": []
                  }
                },
                {
                  "name": "NUMERAL",
                  "value": {
                    "key": "VIII",
                    "literal": true,
                    "variables": []
                  }
                }
              ]
            }
          },
          {
            "name": "NUMERAL",
            "value": {
              "key": "b",
              "literal": true,
              "variables": []
            }
          }
        ]
      },
      "name_key": "SUBPLANET_NAME_FORMAT",
      "class": "pc_frozen",
      "size": 6
    }
  ],
  "deposits": [
    {
      "id": 1042,
      "kind": "d_trade_value_4",
      "swap_type": null
    }
  ],
  "planet_modifiers": [],
  "timed_modifiers": [],
  "surveyed_by": null,
  "station": 498,
  "owner": null,
  "controller": 16,
  "colony": null,
  "flags": 0,
  "anomaly": null,
  "terraforming": false,
  "clearing": [],
  "dig_site": null
}
